Imported from https://kvenkata986@github.com/kvenkata986/kvenkata986.github.io.git

--- a/project.config
+++ b/project.config
@@ -1,2 +1,20 @@
 [access]
 	inheritFrom = All-Projects
+[access "refs/*"]
+	owner = group user/kvenkata986
+[access "refs/for/refs/*"]
+	read = group user/kvenkata986
+	push = group user/kvenkata986
+	label-Code-Review = -2..+2 group user/kvenkata986
+	label-Verified = -1..+1 group user/kvenkata986
+	rebase = group user/kvenkata986
+	removeReviewer = group user/kvenkata986
+	submit = group user/kvenkata986
+[access "refs/heads/*"]
+	read = group user/kvenkata986
+	create = group user/kvenkata986
+	push = +force group user/kvenkata986
+	pushMerge = group user/kvenkata986
+[access "refs/tags/*"]
+	push = group user/kvenkata986
+	push = +force group user/kvenkata986
